# cohere-toolkit

./: .env-template  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Makefile.podman  README.md  app.json  azuredeploy.hpa.json  azuredeploy.hpa.parameters.json  azuredeploy.json  azuredeploy.parameters.json  cloudbuild.yaml  docker-compose-dev.yml  docker-compose.debug.yml  docker-compose.pycharm.debug.yml  docker-compose.vscode.debug.yml  docker-compose.yml  ecs_service.json  gcp.backend.Dockerfile  gcp.frontend.Dockerfile  gcp_postcreate_hook.sh  package-lock.json  pyproject.toml  standalone.Dockerfile
.devcontainer/: devcontainer.json  init.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature_request.yml  improvement.yml
.github/actions/assistants-web-install/: action.yml
.github/actions/coral-web-install/: action.yml
.github/actions/js-install/: action.yml  actions.yml
.github/scripts/: check_revision_ids.py  run_docker_migration.sh  run_src_migration.sh
.github/workflows/: alembic_duplicates.yml  alembic_migrations.yml  assistants_web_tests.yml  automated_release.yml  backend_generate_client.yml  backend_integration_tests.yml  backend_lint.yml  backend_tests.yml  backend_typecheck.yml  backend_unit_tests.yml  build_and_push_docker.yml  build_and_push_docker_proxy.yml  check_revision_id.yml  coral_web_tests.yml  deploy_backend.yml  docker_push_backend.yml  docker_push_frontend.yml  frontend_assistants_web_tests.yml  frontend_coral_web_tests.yml  frontend_slack_bot_tests.yml  interface_tests.yml  python-lint.yml  python-typecheck.yml  run_alembic_migrations.yml  slack_bot_tests.yml
aws_copilot_deploy/: aws-api.Dockerfile  aws-db.Dockerfile  aws-fe.Dockerfile  aws-nginx.Dockerfile  aws-terrarium.Dockerfile  aws_cleanup.sh  aws_deploy.sh  nginx.conf
azure_compose_deploy/: api_entrypoint.sh  azure-api.Dockerfile  azure-db.Dockerfile  azure-fe.Dockerfile  azure-nginx.Dockerfile  azure_cleanup.sh  azure_deploy.sh  configuration.yaml  docker-compose-azure.yml  nginx.conf  secrets.yaml
carbon_gmail_test/: main.py  webhook_server.py
charts/cohere-toolkit/: Chart.yaml  README.md  values.yaml
charts/cohere-toolkit/templates/: _helpers.tpl  backend.yaml  frontend.yaml  migrations.yaml  terrarium.yaml
charts/cohere-toolkit/values/: local.yaml
cli/: main.py  requirements.txt
copilot/environments/dev/: manifest.yml
copilot/toolkit-app-api/: manifest.yml
copilot/toolkit-app-db/: manifest.yml
copilot/toolkit-app-fe/: manifest.yml
copilot/toolkit-app-nginx/: manifest.yml
copilot/toolkit-app-terrarium/: manifest.yml
data/: dump.rdb
docker_scripts/: cloudrun-entrypoint.sh  debugrun-entrypoint.sh  entrypoint.sh  env-defaults  functions  gcp-entrypoint.sh  nginx.conf
docs/: auth_guide.md  command_model_providers.md  debugging.md  github_codespaces.md  github_migrations_action.md  how_to_guides.md  service_deployments.md  setup.md  text_to_speech.md  theming.md  troubleshooting.md
docs/config_details/: config_description.md
docs/custom_tool_guides/: github.md  gmail.md  google_drive.md  sharepoint.md  slack.md  tool_auth_guide.md  tool_guide.md
docs/deployment_guides/: aws_deployment.md  aws_ecs_single_container.md  aws_ecs_single_container_ec2.md  azure_deployment.md  gcp_deployment.md  gcp_one_click_deployment.md  single_container.md
docs/openapi/: no_auth.json  with_auth.json
docs/postman/: Toolkit.postman_collection.json
docs/walkthrough/: walkthrough.md
gmail_test/: main.py
helm/cohere-toolkit/: Chart.yaml  README.md  values.yaml
helm/cohere-toolkit/templates/: _helpers.tpl  backend.yaml  frontend.yaml  secret.yaml
helm/cohere-toolkit/values/: local.yaml
helper_scripts/: metrics_helper.py
src/311/: pyvenv.cfg
src/backend/: Dockerfile  alembic-test.ini  alembic.ini  debug.Dockerfile  exceptions.py  main.py  pycharm.debug.Dockerfile  pycharm_debug_main.py  pytest.ini  pytest_integration.ini  vscode.debug.Dockerfile
src/backend/alembic/: README  env.py
src/backend/brave_search/: __init__.py
src/backend/chat/: base.py  collate.py  enums.py
src/backend/cli/: constants.py  main.py  prompts.py  setters.py  utils.py
src/backend/compass_sdk/: __init__.py  compass.py  constants.py  parser.py  utils.py
src/backend/config/: __init__.py  auth.py  config.py  configuration.template.yaml  configuration.yaml  default_agent.py  deployments.py  routers.py  secrets.template.yaml  secrets.yaml  settings.py  tools.py
src/backend/config_v2/: __init__.py  config.py  configuration.yaml  secrets.yaml
src/backend/crud/: agent.py  agent_task.py  agent_tasks.py  agent_tool_metadata.py  blacklist.py  citation.py  conversation.py  deployment.py  document.py  file.py  group.py  message.py  model.py  organization.py  snapshot.py  tool.py  tool_auth.py  tool_call.py  user.py
src/backend/database_models/: __init__.py  agent.py  agent_task.py  agent_tool_metadata.py  base.py  blacklist.py  citation.py  conversation.py  database.py  deployment.py  document.py  file.py  group.py  message.py  model.py  organization.py  snapshot.py  tool.py  tool_auth.py  tool_call.py  user.py
src/backend/metrics/: __init__.py  middleware.py  tool_call_decorator.py
src/backend/middleware/: __init__.py  logging.py
src/backend/model_deployments/: __init__.py  azure.py  base.py  bedrock.py  cohere_platform.py  sagemaker.py  single_container.py  utils.py
src/backend/models/: __init__.py  base.py  citation.py  conversation.py  database.py  document.py  file.py  message.py  user.py
src/backend/routers/: __init__.py  agent.py  auth.py  chat.py  conversation.py  deployment.py  message.py  model.py  (+7 more)
src/carbon_gmail_test/: drive.py  main.py  main_utils.py  setup_webhook.py  utils.py  webhook_server.py  webhook_verify.py
src/frontend/: .babelrc  .gitignore  .prettierignore  Dockerfile  next.config.mjs  pnpm-lock.yaml  tailwind.config.js
src/terrarium/: .gcloudignore  .gitignore  Dockerfile  LICENSE  README.md  index.js  package-lock.json  package.json  terrarium_client.py
(+1776 files in other folders)
